--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Montserrat:wght@500&family=Syne:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/index.css" />
-
     <title>Snitap Patins</title>
   </head>
-  <body></body>
+  <body>
+    <header class="top">
+      <a href="#">
+        <img src="assets/logo.svg" alt="" />
+      </a>
+      <a href="#">
+        <img src="assets/icons/shopping-bag.svg" alt="" />
+        <span>1</span>
+      </a>
+    </header>
+  </body>
 </html>
