--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
         <span>1</span>
       </a>
     </header>
+
+    <section class="hero">
+      <div>
+        <h1>Snitap, sua vida mais</h1>
+        <div>
+          <span>radical</span>
+          <span>divertida</span>
+          <span>saudável</span>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
