--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
 
     <section class="hero">
       <div>
-        <h1>Snitap, sua vida mais</h1>
-        <div>
-          <span>radical</span>
-          <span>divertida</span>
-          <span>saudável</span>
-        </div>
+        <h1>
+          Snitap, sua vida mais
+          <div>
+            <span>radical</span>
+            <span>divertida</span>
+            <span>saudável</span>
+            <span>radical</span>
+            <!--usado para que a sensação de "scroll" funcione quando a animação voltar pro começo, por isso se repete-->
+          </div>
+        </h1>
       </div>
     </section>
   </body>
