estrutura dos botões

--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
             <!--usado para que a sensação de "scroll" funcione quando a animação voltar pro começo, por isso se repete-->
           </div>
         </h1>
+
+        <div class="buttons">
+          <a href="#">
+            <img src="assets/icons/shopping-bag.svg" alt="" />
+            COMPRAR AGORA
+          </a>
+
+          <a href="#">
+            <span>
+              <img src="assets/icons/play.svg" alt="" />
+            </span>
+            VEJA EM AÇÃO
+          </a>
+        </div>
       </div>
     </section>
   </body>
