adicionando o estilo dos botões da hero

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </h1>
 
         <div class="buttons">
-          <a href="#">
+          <a href="#" class="button buy shadow">
             <img src="assets/icons/shopping-bag.svg" alt="" />
             COMPRAR AGORA
           </a>
 
-          <a href="#">
-            <span>
+          <a href="#" class="button play">
+            <span class="shadow">
               <img src="assets/icons/play.svg" alt="" />
             </span>
             VEJA EM AÇÃO
