adicionando e animando banner da hero

--- a/index.html
+++ b/index.html
@@ -61,5 +61,31 @@
         </div>
       </div>
     </section>
+
+    <!--container pai de toda a animação-->
+    <section class="banner">
+      <!--vai manter o limite do container da animação-->
+      <div class="scroller bg-gradient-animate">
+        <!--vai ficar se mexendo na animação-->
+        <div class="rolling">
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+          <img src="assets/banner.svg" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
