tentando fazer o banner de outro jeito

--- a/index.html
+++ b/index.html
@@ -67,24 +67,7 @@
       <!--vai manter o limite do container da animação-->
       <div class="scroller bg-gradient-animate">
         <!--vai ficar se mexendo na animação-->
-        <div class="rolling">
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-          <img src="assets/banner.svg" alt="" />
-        </div>
+        <div class="rolling"></div>
       </div>
     </section>
   </body>
