--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <footer>
       <div class="logo">
         <img src="assets/logo.svg" alt="" />
+        Snitap
       </div>
 
       <nav>
